--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -29,6 +29,7 @@
     "test:hardhat": "hardhat test --typecheck"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "5.3.0",
     "ds-test": "dapphub/ds-test",
     "forge-std": "foundry-rs/forge-std",
     "solidity-stringutils": "Arachnid/solidity-stringutils"
