--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "resolutions": {
     "base-x": ">=3.0.11",
+    "brace-expansion": ">=2.0.2",
     "cookie": ">=0.7.0",
     "debug": ">=3.2.7",
     "elliptic": ">=6.6.1",
